...
    func didRefresh()
    func toggleSettingsPresentation()
  }

  enum A11yIDs: String, A11yIDProvider {
    case navTitle = "nav-title"
    case enterSettingsButton = "enter-settings-button"
    case exitSettingsButton = "escape-settings-button"
    var a11yID: String { rawValue }
  }

  struct FeatureView<ViewModel: FeatureViewModel>: View {
    @Bindable
    var viewModel: ViewModel
...
