...
    var isShimmering: Bool { get }
    var exported: Deps.Export.TransferableCharacter? { get }
    func preloadIfNeeded()
  }

  enum A11yIDs: String, A11yIDProvider {
    case exportToPDF = "export-to-pdf"
    var a11yID: String { rawValue }
  }

  struct FeatureView<ViewModel: FeatureViewModel>: View {
    @Bindable
    var viewModel: ViewModel
...
